feat: docs for products endpoints
